--- a/1__Ver/index.html
+++ b/1__Ver/index.html
@@ -1,15 +1,12 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-
-    <title>Hello, world!</title>
-  </head>
+<!DOCTYPE HTML>
+<html>
+	<head>
+		<title>Quran Audio</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
+		<link rel="stylesheet" href="css/styles.css" />
+	</head>
 	<body>
 
 		<!-- Header -->
@@ -33,9 +30,6 @@
 				<li>
 				<div class="grid grid-2">
 				<input id="surah" type="text" placeholder="Surah Number" required onkeyup="chkVals()">
-
-
-
 				</div>
 				</li>
 
